# memcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.claude/skills/llm-council/: SKILL.md
.github/workflows/: ci.yml  claude.yml  dependabot-automerge.yml  publish-docker.yml  publish-pypi.yml
memcp/: __init__.py  __main__.py  auth.py  config.py  logging.py  server.py  tools.py  types.py
memcp/backend/: base.py
tests/: conftest.py  test_auth.py  test_tools.py
