[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memcp"
version = "0.1.0.dev1"
description = "Backend-agnostic, multi-tenant MCP memory server"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
    "pydantic>=2.11",
    "pydantic-settings>=2.0",
    "starlette>=0.27",
    "uvicorn>=0.30",
]

[project.scripts]
memcp = "memcp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
    "pyright>=1.1",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
