[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memcp-server"
version = "0.1.0"
description = "Backend-agnostic, multi-tenant MCP memory server"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "starlette>=0.27",
    "uvicorn>=0.49.0",
]

[project.scripts]
memcp = "memcp.__main__:main"

[project.optional-dependencies]
dev = [
    "asgi-lifespan>=2.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "respx>=0.22",
    "ruff>=0.15.16",
    "pyright>=1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["memcp"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
